--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
   compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
+  compile "com.github.spullara.mustache.java:compiler:$mustache_version"
+
   testCompile "io.kotlintest:kotlintest:$kotlintest_version"
   testCompile "org.junit.jupiter:junit-jupiter-api:$junit_jupiter_version"
   testRuntime "org.junit.jupiter:junit-jupiter-engine:$junit_jupiter_version"
