--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ version = 1.0.0-SNAPSHOT
 
 # Dependency versions
 kotlin_version = 1.2.30
+mustache_version = 0.8.18
 
 # Test dependency versions
 junit_jupiter_version = 5.1.0
