--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,9 @@ version = 1.0.0-DEMO-SNAPSHOT
 # Dependency versions
 kotlin_version = 1.2.30
 mustache_version = 0.8.18
+kotlin_argparser_version = 2.0.4
+jackson_version = 2.9.3
+konfig_version = 1.6.1.0
 
 # Test dependency versions
 junit_jupiter_version = 5.1.0
