--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Project information
 group = com.ekino.oss.tooling.demo
 description = Command line tooling demo
-version = 1.0.0-SNAPSHOT
+version = 1.0.0
 
 # Dependency versions
 kotlin_version = 1.2.30
